unpackaged/main/default/objects/Engagement_Attendee__c/fields/IsUser__c.field-meta.xml
<CustomField>
    <fullName>IsUser__c</fullName>
    <formula>User_Code__c = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is User&#39;s?</label>
    <type>Checkbox</type>
</CustomField>