unpackaged/main/default/objects/Engagement_Attendee__c/fields/Last_Reschedule_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Reschedule_Date__c</fullName>
    <formula>ADDMONTHS( First_Reschedule_Date__c , 6)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Reschedule Date</label>
    <type>Date</type>
</CustomField>