unpackaged/main/default/objects/Engagement_Attendee__c/fields/Last_Time_Rescheduled__c.field-meta.xml
<CustomField>
    <fullName>Last_Time_Rescheduled__c</fullName>
    <label>Last Time Rescheduled</label>
    <type>Date</type>
</CustomField>