unpackaged/main/default/objects/Engagement_Attendee__c/fields/Legacy_Program_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Program_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Legacy Program ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>