unpackaged/main/default/objects/Engagement_Attendee__c/fields/Location_Times__c.field-meta.xml
<CustomField>
    <fullName>Location_Times__c</fullName>
    <inlineHelpText>Used for Email Templates, pulls from Engagement</inlineHelpText>
    <label>Location / Times</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>