unpackaged/main/default/objects/Engagement_Attendee__c/fields/Meeting_Code_Intranet__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Code_Intranet__c</fullName>
    <label>Meeting Id (Intranet)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>