unpackaged/main/default/objects/Engagement_Attendee__c/fields/Member_Number__c.field-meta.xml
<CustomField>
    <fullName>Member_Number__c</fullName>
    <formula>IF(
    NOT(ISBLANK(X20_Groups_Member__c)),
    X20_Groups_Member__r.Member_Number_Code__c,
    IF(
        NOT(ISBLANK(Proprietary_Account__c)),
        Proprietary_Account__r.Member_Number_Code__c,
        &quot;&quot;
    )
)</formula>
    <label>Member Number</label>
    <type>Text</type>
</CustomField>