unpackaged/main/default/objects/Engagement_Attendee__c/fields/NCMi_Course_Marketo__c.field-meta.xml
<CustomField>
    <fullName>NCMi_Course_Marketo__c</fullName>
    <description>Used exclusively for Marketo sync operations</description>
    <formula>Course__r.Name</formula>
    <label>NCMi Course - Marketo</label>
    <type>Text</type>
</CustomField>