unpackaged/main/default/objects/Engagement_Attendee__c/fields/Need_Tent_Card__c.field-meta.xml
<CustomField>
    <fullName>Need_Tent_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Need Tent Card?</label>
    <type>Checkbox</type>
</CustomField>