unpackaged/main/default/objects/Engagement_Attendee__c/fields/No_Camera__c.field-meta.xml
<CustomField>
    <fullName>No_Camera__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Camera</label>
    <type>Checkbox</type>
</CustomField>