unpackaged/main/default/objects/Engagement_Attendee__c/fields/Number_of_Reschedules__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Reschedules__c</fullName>
    <label>Number of Reschedules</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>