unpackaged/main/default/objects/Engagement_Attendee__c/fields/Payable_Account__c.field-meta.xml
<CustomField>
    <fullName>Payable_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payable Account</label>
    <referenceTo>Billing_Account__c</referenceTo>
    <relationshipLabel>Engagement Attendees (Payable Account)</relationshipLabel>
    <relationshipName>Engagement_Attendees1</relationshipName>
    <type>Lookup</type>
</CustomField>