unpackaged/main/default/objects/Engagement_Attendee__c/fields/Primary_Email_from_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Email_from_Contact__c</fullName>
    <formula>Contact__r.Email</formula>
    <label>Primary Email (from Contact)</label>
    <type>Text</type>
</CustomField>