unpackaged/main/default/objects/Engagement_Attendee__c/fields/Proprietary_Account__c.field-meta.xml
<CustomField>
    <fullName>Proprietary_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proprietary Account</label>
    <referenceTo>Proprietary_Account__c</referenceTo>
    <relationshipLabel>Engagement Attendees</relationshipLabel>
    <relationshipName>Engagement_Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>