unpackaged/main/default/objects/Engagement_Attendee__c/fields/Refund_Amount__c.field-meta.xml
<CustomField>
    <fullName>Refund_Amount__c</fullName>
    <description>TEMPORARY FIELD DELETE WHEN COHORT PIPELINE GOES IN</description>
    <inlineHelpText>TEMPORARY FIELD DELETE WHEN COHORT PIPELINE GOES IN</inlineHelpText>
    <label>Refund Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>