unpackaged/main/default/objects/Engagement_Attendee__c/fields/Registration_Received__c.field-meta.xml
<CustomField>
    <fullName>Registration_Received__c</fullName>
    <label>Registration Received</label>
    <type>Date</type>
</CustomField>