unpackaged/main/default/objects/Engagement_Attendee__c/fields/Reminder_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Email_Sent__c</fullName>
    <description>Date/Time the NCMi Institute Reminder Email was sent to the Attendee.</description>
    <inlineHelpText>Date/Time the NCMi Institute Reminder Email was sent to the Attendee.</inlineHelpText>
    <label>Reminder Email Sent</label>
    <type>DateTime</type>
</CustomField>