unpackaged/main/default/objects/Engagement_Attendee__c/fields/Replaced__c.field-meta.xml
<CustomField>
    <fullName>Replaced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Replaced?</label>
    <type>Checkbox</type>
</CustomField>