unpackaged/main/default/objects/Engagement_Attendee__c/fields/Reporting_Type__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Type__c</fullName>
    <formula>if( not(ISBLANK(Training_Subscription_Account__c)),&quot;Subscription&quot;,

if(Not(ISBLANK( Training_Credit__c )), &quot;Training Credit&quot;,

if( 

OR(
Engagement__r.RecordType.Name=&quot;NCM Institute Class - Onsite&quot;, 
Engagement__r.RecordType.Name = &quot;NCM Institute Class - Offsite&quot;, 
Engagement__r.RecordType.Name = &quot;NCM Institute Class - Self Study Virtual Training&quot;, 
Engagement__r.RecordType.Name = &quot;NCM Institute Class - Live Session Virtual Training&quot;
)

, &quot;Paid Seat&quot;,

&quot;Other&quot;
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Type</label>
    <type>Text</type>
</CustomField>