unpackaged/main/default/objects/Engagement_Attendee__c/fields/Retained_Cancellation_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Retained_Cancellation_Revenue__c</fullName>
    <formula>if(isblank( Tuition_Mod_Date__c) ,0,Course_Price__c -  Refund_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retained Cancellation Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>