unpackaged/main/default/objects/Engagement_Attendee__c/fields/Room_Rate__c.field-meta.xml
<CustomField>
    <fullName>Room_Rate__c</fullName>
    <label>Room Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>