unpackaged/main/default/objects/Engagement_Attendee__c/fields/Shortest_Notice__c.field-meta.xml
<CustomField>
    <fullName>Shortest_Notice__c</fullName>
    <inlineHelpText>Number of Days prior to the Engagement Start that a reschedule occurred</inlineHelpText>
    <label>Shortest Notice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>