unpackaged/main/default/objects/Engagement_Attendee__c/fields/Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Sponsor of engagement attendee. This can be the Member of a 20 Group, the point of contact for an attendee etc.</inlineHelpText>
    <label>Sponsor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Engagement Attendees (Sponsor)</relationshipLabel>
    <relationshipName>Engagement_Attendees1</relationshipName>
    <type>Lookup</type>
</CustomField>