unpackaged/main/default/objects/Engagement_Attendee__c/fields/Sponsor_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Agreement__c</fullName>
    <description>date field for virtual training record</description>
    <label>Sponsor Agreement</label>
    <type>Date</type>
</CustomField>