unpackaged/main/default/objects/Engagement_Attendee__c/fields/Sponsor_Email__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Email__c</fullName>
    <label>Sponsor Email</label>
    <type>Email</type>
</CustomField>