unpackaged/main/default/objects/Engagement_Attendee__c/fields/Sponsor_Id__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Id__c</fullName>
    <formula>Sponsor__r.ContactID_18__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sponsor Id</label>
    <type>Text</type>
</CustomField>