unpackaged/main/default/objects/Engagement_Attendee__c/fields/Sponsor_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Mobile__c</fullName>
    <formula>IF(
ISBLANK(Sponsor__r.MobilePhone ),
NULL,
&quot;(&quot;&amp;
 MID(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE( Sponsor__r.MobilePhone  , &quot;.&quot;, &#39;&#39;),&quot;-&quot;,&quot;&quot;),&quot;+&quot;,&quot;&quot;),1,3)&amp;
 &quot;) &quot;&amp;
 MID(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE( Sponsor__r.MobilePhone  , &quot;.&quot;, &#39;&#39;),&quot;-&quot;,&quot;&quot;),&quot;+&quot;,&quot;&quot;),4,3)&amp;
 &quot;-&quot;&amp;
 MID(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE( Sponsor__r.MobilePhone  , &quot;.&quot;, &#39;&#39;),&quot;-&quot;,&quot;&quot;),&quot;+&quot;,&quot;&quot;),7,4)
)</formula>
    <label>Sponsor Mobile</label>
    <type>Text</type>
</CustomField>