unpackaged/main/default/objects/Engagement_Attendee__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Populated with Account Physical Address Abbreviation.</description>
    <label>State</label>
    <length>3</length>
    <type>Text</type>
</CustomField>