unpackaged/main/default/objects/Engagement_Attendee__c/fields/Student_Log_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Student_Log_In_Date__c</fullName>
    <description>date field for NCMi student login.</description>
    <label>Student Log-In Date</label>
    <type>Date</type>
</CustomField>