unpackaged/main/default/objects/Engagement_Attendee__c/fields/Student_Walkthrough_Performed__c.field-meta.xml
<CustomField>
    <fullName>Student_Walkthrough_Performed__c</fullName>
    <description>date of student walkthrough performed.</description>
    <label>Student Walkthrough Performed</label>
    <type>Date</type>
</CustomField>