unpackaged/main/default/objects/Engagement_Attendee__c/fields/Survey_Completed__c.field-meta.xml
<CustomField>
    <fullName>Survey_Completed__c</fullName>
    <description>The date/time the attendee completed their survey.</description>
    <inlineHelpText>The date/time the attendee completed their survey.</inlineHelpText>
    <label>Survey Completed</label>
    <type>DateTime</type>
</CustomField>