unpackaged/main/default/objects/Engagement_Attendee__c/fields/Survey_Sent__c.field-meta.xml
<CustomField>
    <fullName>Survey_Sent__c</fullName>
    <label>Survey Sent</label>
    <type>DateTime</type>
</CustomField>