unpackaged/main/default/objects/Engagement_Attendee__c/fields/Survey_Sent_not_Completed__c.field-meta.xml
<CustomField>
    <fullName>Survey_Sent_not_Completed__c</fullName>
    <description>Indicates attendee has been sent a survey but has not yet completed it.</description>
    <formula>AND(
 NOT(ISBLANK(Survey_Sent__c)),
 ISBLANK(Survey_Completed__c)
)</formula>
    <inlineHelpText>Indicates attendee has been sent a survey but has not yet completed it.</inlineHelpText>
    <label>Survey Sent not Completed</label>
    <type>Checkbox</type>
</CustomField>