unpackaged/main/default/objects/Engagement_Attendee__c/fields/Survey_URL__c.field-meta.xml
<CustomField>
    <fullName>Survey_URL__c</fullName>
    <label>Survey URL</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>