unpackaged/main/default/objects/Engagement_Attendee__c/fields/Tent_Card_Line_0__c.field-meta.xml
<CustomField>
    <fullName>Tent_Card_Line_0__c</fullName>
    <label>Tent Card Line 0</label>
    <length>35</length>
    <type>Text</type>
</CustomField>