unpackaged/main/default/objects/Engagement_Attendee__c/fields/Tent_Card_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Tent_Card_Line_1__c</fullName>
    <label>Tent Card Line 1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>