unpackaged/main/default/objects/Engagement_Attendee__c/fields/Tent_Card_No__c.field-meta.xml
<CustomField>
    <fullName>Tent_Card_No__c</fullName>
    <label>Tent Card #</label>
    <length>2</length>
    <type>Text</type>
</CustomField>