unpackaged/main/default/objects/Engagement_Attendee__c/fields/Test_Sent__c.field-meta.xml
<CustomField>
    <fullName>Test_Sent__c</fullName>
    <label>Test Sent</label>
    <type>DateTime</type>
</CustomField>