unpackaged/main/default/objects/Engagement_Attendee__c/fields/Training_Credit__c.field-meta.xml
<CustomField>
    <fullName>Training_Credit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Credit</label>
    <referenceTo>Training_Credit__c</referenceTo>
    <relationshipLabel>Engagement Attendees</relationshipLabel>
    <relationshipName>Engagement_Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>