unpackaged/main/default/objects/Engagement_Attendee__c/fields/Training_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Training_Subscription__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Training Subscription Term</label>
    <referenceTo>Training_Subscription_Term__c</referenceTo>
    <relationshipLabel>Engagement Attendees</relationshipLabel>
    <relationshipName>Engagement_Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>