unpackaged/main/default/objects/Engagement_Attendee__c/fields/Training_Subscription_Account__c.field-meta.xml
<CustomField>
    <fullName>Training_Subscription_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Subscription Account</label>
    <referenceTo>Training_Subscription_Account__c</referenceTo>
    <relationshipLabel>Engagement Attendees</relationshipLabel>
    <relationshipName>Engagement_Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>