unpackaged/main/default/objects/Engagement_Attendee__c/fields/Training_Use_Count__c.field-meta.xml
<CustomField>
    <fullName>Training_Use_Count__c</fullName>
    <defaultValue>1</defaultValue>
    <description>This field is used for counting whether or not this Engagement Attendee is counted as a used variable in Training Credit / Subscription</description>
    <label>Training Use Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>