unpackaged/main/default/objects/Engagement_Attendee__c/fields/Travel_Credits__c.field-meta.xml
<CustomField>
    <fullName>Travel_Credits__c</fullName>
    <formula>Contact__r.Travel_Credits__c</formula>
    <label>Travel Credits</label>
    <type>Text</type>
</CustomField>