unpackaged/main/default/objects/Engagement_Attendee__c/fields/Travel_Lodging_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Travel_Lodging_Instructions__c</fullName>
    <inlineHelpText>Used for email templates sent out to the Engagement Attendees</inlineHelpText>
    <label>Travel &amp; Lodging Instructions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>