unpackaged/main/default/objects/Engagement_Attendee__c/fields/Tuition_Mod_Date__c.field-meta.xml
<CustomField>
    <fullName>Tuition_Mod_Date__c</fullName>
    <inlineHelpText>Date the tuition was modified - this may be 0-100% balance between revenue recognized and tuition refund to client</inlineHelpText>
    <label>Tuition Mod Date</label>
    <type>Date</type>
</CustomField>