unpackaged/main/default/objects/Engagement_Attendee__c/fields/User_Code__c.field-meta.xml
<CustomField>
    <fullName>User_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User (Code)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Engagement_Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>