unpackaged/main/default/objects/Engagement_Attendee__c/fields/Verify_Travel_Changes__c.field-meta.xml
<CustomField>
    <fullName>Verify_Travel_Changes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verify Travel Changes</label>
    <type>Checkbox</type>
</CustomField>