unpackaged/main/default/objects/Engagement_Attendee__c/fields/Waitlist_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Waitlist_Confirmed__c</fullName>
    <formula>Engagement_Waitlist__r.Confirmed_in_Class__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Waitlist Confirmed</label>
    <type>Date</type>
</CustomField>