unpackaged/main/default/objects/Engagement_Attendee__c/fields/Welcome_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Email_Sent__c</fullName>
    <description>Date/Time the NCMi Institute Welcome Email was sent to the Attendee.</description>
    <inlineHelpText>Date/Time the NCMi Institute Welcome Email was sent to the Attendee.</inlineHelpText>
    <label>Welcome Email Sent</label>
    <type>DateTime</type>
</CustomField>