unpackaged/main/default/objects/Engagement_Attendee__c/fields/Winmaster_Member_Name__c.field-meta.xml
<CustomField>
    <fullName>Winmaster_Member_Name__c</fullName>
    <formula>IF(
ISBLANK(X20_Groups_Member__c),
IF(
ISBLANK(Proprietary_Account__c),
&quot;&quot;,
Proprietary_Account__r.WinMaster_Member_Name__c 
),
X20_Groups_Member__r.WinMaster_Member_Name__c 
)</formula>
    <label>Winmaster Member Name</label>
    <type>Text</type>
</CustomField>