unpackaged/main/default/objects/Engagement_Attendee__c/fields/X1st_Deferment_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>X1st_Deferment_Follow_Up__c</fullName>
    <inlineHelpText>Date the first contact was made to follow up with student on their deferment.</inlineHelpText>
    <label>1st Deferment Follow Up</label>
    <type>Date</type>
</CustomField>