unpackaged/main/default/objects/Engagement_Attendee__c/fields/X20_Groups_Member__c.field-meta.xml
<CustomField>
    <fullName>X20_Groups_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>20 Groups Member Account</label>
    <referenceTo>X20_Groups_Member__c</referenceTo>
    <relationshipLabel>Engagement Attendance</relationshipLabel>
    <relationshipName>Engagement_Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>