unpackaged/main/default/objects/Engagement_Attendee__c/recordTypes/Engagement_Attendee.recordType-meta.xml
<RecordType>
    <fullName>Engagement_Attendee</fullName>
    <active>true</active>
    <label>Engagement Attendee</label>
</RecordType>