unpackaged/main/default/objects/Engagement_Attendee__c/recordTypes/Institute_Cohort_Seat.recordType-meta.xml
<RecordType>
    <fullName>Institute_Cohort_Seat</fullName>
    <active>true</active>
    <label>Institute - Cohort Seat</label>
</RecordType>