unpackaged/main/default/objects/Engagement_Attendee__c/recordTypes/Institute_Paid_Seat.recordType-meta.xml
<RecordType>
    <fullName>Institute_Paid_Seat</fullName>
    <active>true</active>
    <description>Paid Seat for NCM Institute students not using a subscription</description>
    <label>Institute - Paid Seat</label>
</RecordType>