unpackaged/main/default/objects/Engagement_Attendee__c/recordTypes/Institute_Training_Credit.recordType-meta.xml
<RecordType>
    <fullName>Institute_Training_Credit</fullName>
    <active>true</active>
    <label>Institute - Training Credit</label>
</RecordType>