unpackaged/main/default/objects/Engagement_Attendee__c/recordTypes/Institute_Training_Subscription_Seats.recordType-meta.xml
<RecordType>
    <fullName>Institute_Training_Subscription_Seats</fullName>
    <active>true</active>
    <description>NCM attendance record for students using subscription services</description>
    <label>Institute - Training Subscription Seats</label>
</RecordType>