unpackaged/main/default/objects/Engagement_Attendee__c/recordTypes/NCM_Attendee.recordType-meta.xml
<RecordType>
    <fullName>NCM_Attendee</fullName>
    <active>true</active>
    <label>NCM Attendee</label>
</RecordType>