unpackaged/main/default/objects/Engagement_Attendee__c/validationRules/Engagement_Attendee_Account_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Engagement_Attendee_Account_Required</fullName>
    <active>true</active>
    <description>Certain Attendee Types require the Account field to be filled in.</description>
    <errorConditionFormula>AND(
  RecordTypeId = &quot;0124A000001BVDGQA4&quot;,
  NOT(ISPICKVAL( Attendee_Type__c , &quot;Guest&quot; )),
  NOT(ISPICKVAL( Attendee_Type__c , &quot;Visitor&quot; )),
  ISBLANK( Account__c )
)</errorConditionFormula>
    <errorMessage>Please select an Account for this attendee.</errorMessage>
</ValidationRule>