unpackaged/main/default/objects/Engagement_Attendee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Attendee_Type__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Engagement__c</columns>
    <columns>Engagement_Record_Type__c</columns>
    <columns>Arrival__c</columns>
    <columns>Departure__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Engagement_Attendee__c.Institute_Paid_Seat</value>
    </filters>
    <label>All</label>
</ListView>