unpackaged/main/default/objects/Engagement_Attendee__c/listViews/Moderators.listView-meta.xml
<ListView>
    <fullName>Moderators</fullName>
    <columns>NAME</columns>
    <columns>Engagement__c</columns>
    <columns>Collateral_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Attendee_Type__c</field>
        <operation>equals</operation>
        <value>Moderator</value>
    </filters>
    <label>Moderators</label>
</ListView>