unpackaged/main/default/objects/Engagement_Attendee__c/listViews/NCM_Attendee.listView-meta.xml
<ListView>
    <fullName>NCM_Attendee</fullName>
    <columns>NAME</columns>
    <columns>Engagement__c</columns>
    <columns>Attendance_Status__c</columns>
    <columns>Arrival__c</columns>
    <columns>Departure__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Engagement_Attendee__c.NCM_Attendee</value>
    </filters>
    <filters>
        <field>Attendance_Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled,No Show</value>
    </filters>
    <label>NCM Attendee</label>
</ListView>