unpackaged/main/default/objects/Engagement_Attendee__c/listViews/Retail_Solutions_Attendees.listView-meta.xml
<ListView>
    <fullName>Retail_Solutions_Attendees</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Engagement_Attendee__c.Engagement_Attendee</value>
    </filters>
    <label>Retail Solutions Attendees</label>
</ListView>